Fix splash icon presentation for Andorid 12 devices

--- a/android/app/src/main/res/drawable-v21/launch_background.xml
+++ b/android/app/src/main/res/drawable-v21/launch_background.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item>
-        <color android:color="@color/pcos_orange" />
-   </item>
+    <item android:drawable="@color/pcos_orange" />
+
     <item>
         <bitmap
             android:gravity="center"
