Update background to use the actual ovie green background from the image in Android

--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="pcos_orange">#f79869</color>
+    <color name="ovie_green">#00504A</color>
 </resources>
