--- a/android/app/src/main/res/values-v31/styles.xml
+++ b/android/app/src/main/res/values-v31/styles.xml
@@ -4,7 +4,7 @@
     <style name="LaunchTheme" parent="@android:style/Theme.Black.NoTitleBar">
         <!-- Show a splash screen on the activity. Automatically removed when
              Flutter draws its first frame -->
-        <item name="android:windowSplashScreenBackground">@color/pcos_orange</item>
+        <item name="android:windowSplashScreenBackground">@color/ovie_green</item>
         <item name="android:windowSplashScreenAnimatedIcon">@mipmap/ic_launcher</item>
     </style>
     <!-- Theme applied to the Android Window as soon as the process has started.
@@ -14,6 +14,6 @@
          
          This Theme is only used starting with V2 of Flutter's Android embedding. -->
     <style name="NormalTheme" parent="@android:style/Theme.Black.NoTitleBar">
-        <item name="android:windowBackground">@color/pcos_orange</item>
+        <item name="android:windowBackground">@color/ovie_green</item>
     </style>
 </resources>
